<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/change_category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="12sp"
        android:text="@string/change_category" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/category_name" />

    <TextView
        android:id="@+id/question_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/questionid"
        android:layout_below="@+id/change_category_label"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:text="@string/question_placeholder"
        android:layout_below="@+id/question_id"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="49dp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/option4" />

    </RadioGroup>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickPrevious"
        android:layout_marginBottom="108dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:onClick="onClickSubmit"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/next" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:onClick="onClickNext"
        android:layout_alignBaseline="@+id/prev"
        android:layout_alignBottom="@+id/prev"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="20dp"
        android:textSize="16sp"
        android:text="@string/score"/>

    <TextView
        android:id="@+id/score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/score_label"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/_0" />

    <TextView
        android:id="@+id/questions_answered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Questions Answered: 0"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/score_label"
        android:layout_marginBottom="11dp" />


</RelativeLayout>
